fix: avoid clipboard permission request pop-up when using keyboard shortcuts

--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,9 @@
     "tabs",
     "storage",
     "activeTab",
-    "scripting"
+    "scripting",
+    "clipboardWrite",
+    "offscreen"
   ],
 
   "action": {
